objects/ArchivedFeedItem__c.object
<CustomObject>
    <fields>
        <fullName>ArchivedEntityFeed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Archived Entity Feed</label>
        <referenceTo>ArchivedEntityFeed__c</referenceTo>
        <relationshipLabel>Archived Feed Items</relationshipLabel>
        <relationshipName>ArchivedFeedItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>The content of the FeedItem beign Archived. Required when Type is TextPost. Optional when Type is ContentPost or LinkPost. This is the message that appears in the feed.</description>
        <label>Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chatter_Record__c</fullName>
        <formula>IF( TEXT(Type__c) == &apos;UserPost&apos;,
HYPERLINK( &apos;_ui/core/userprofile/UserProfilePage?u=&apos;&amp; ParentId__c &amp;&apos;&amp;ChatterFeedItemId=&apos;&amp; FeedItemId__c , &apos;Chatter Record&apos;)
,HYPERLINK( ParentId__c&amp;&apos;?ChatterFeedItemId=&apos;&amp; FeedItemId__c ,  &apos;Chatter Record&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentCount__c</fullName>
        <label>Comment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContentDescription__c</fullName>
        <description>The description of the file uploaded in ContentData.</description>
        <label>ContentDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContentFileName__c</fullName>
        <description>The file uploaded to the feed. Required if Type is ContentPost. The name of the file uploaded to the feed. Setting ContentFileName automatically sets Type to ContentPost.</description>
        <label>ContentFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentSize__c</fullName>
        <label>Content Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>FeedItem Created Date</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Archived_Feed_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeedItemId__c</fullName>
        <externalId>true</externalId>
        <label>FeedItemId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FullArchivedCommentList__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, this flag indicates that all the comments in this post had been already archived.</description>
        <label>Full archived comment list</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <formula>ArchivedEntityFeed__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inserted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the value of the field InsertedById on the original FeedItem</description>
        <label>Feed Item Inserted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Archived_Feed_Items_Inserted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LinkUrl__c</fullName>
        <label>LinkUrl</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <description>ID of the object type to which the FeedItem is related. For example, set the ParentId to a UserId to post to someone’s profile feed, or an AccountId to post to a specific account.</description>
        <label>ParentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentObjectType__c</fullName>
        <description>Object type  to which the FeedItem is related. For example, set the ParentId to an Account if the post was on a specific account.</description>
        <label>ParentObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <formula>HYPERLINK(   ParentId__c,  GroupName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedRecordId__c</fullName>
        <description>ID of the ContentVersion object associated with a ContentPost. This field is null for all posts except ContentPost.
For example, set the RelatedRecordId to an existing ContentVersion and post it to a feed as a FeedItem object of TypeContentPost.</description>
        <label>RelatedRecordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedRecord__c</fullName>
        <formula>IF(  TEXT(Type__c)  =&apos;ContentPost&apos;,  
HYPERLINK( RelatedRecordId__c  ,   ContentFileName__c  )  , 
ContentFileName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>UserStatus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TrackedChange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TextPost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkPost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContentPost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates wether if the real FeddItem record is present or not in chatter Application</description>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isParentDeleted__c</fullName>
        <formula>IF(ArchivedEntityFeed__r.isDeleted__c, &apos;true&apos;,&apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent is Deleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>retentionBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>retentionBit</label>
        <type>Checkbox</type>
    </fields>
    <label>Archived Feed Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ParentId__c</columns>
        <columns>Body__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>isDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ArchivedFeedItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Feed Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>